# ipcc-data

./: Cargo.toml  README.md
faux-ipcc/: Cargo.toml
faux-ipcc/src/: main.rs
ipcc-data/: Cargo.toml  README.md
ipcc-data/src/: lib.rs
libipcc/: Cargo.toml
libipcc/src/: ffi.rs  handle.rs  handle_stub.rs  lib.rs
src/: lib.rs
