[package]
name = "faux-ipcc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "env"] }
corncobs = "0.1.3"
hex = "0.4.3"
serialport = "4.7.0"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
zerocopy = "0.8.20"

attest-data.git = "https://github.com/oxidecomputer/dice-util"
host-sp-messages.git = "https://github.com/oxidecomputer/hubris"

ipcc-data.path = "../ipcc-data"
